Testing orientation with css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<title>Skeleton2D Demo</title>
 	<style type='text/css'>
-
+		html{
+			orientation: landscape;
+		}
 		body {
 			touch-action: none;
 			margin: 0;
